--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body background="font-png-6.png">
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of a square in Realtime
+  <h3 class="btn heading">FONT MANIPULATOR
     <br>
     <span class="note">NOTE - Get your left and right wrist closer 
-      to reduce the size of the square and to increase the size of 
-      the square keep your left and <br> right wrist far from each other. 
-      Move you nose to move the square</span>
+      to reduce the size of the font and to increase the size of 
+      the font keep your left and <br> right wrist far from each other. 
+      </span>
     <br>
     <span id="square_side"></span>
 
